--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:mysql://192.168.178.28:3306/db225618_8
+spring.datasource.url=jdbc:mysql://172.17.0.1:3306/db225618_8
 spring.datasource.username=admin
 spring.datasource.password=adm12345
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 logging.level.netgloo = DEBUG
+server.port=8081
