Trying travis cache

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,7 @@ services:
 script:
   - docker run -it -v $(pwd):/root/sources -w /root/sources maven:3.3.3-jdk-8 mvn clean package
   - docker build .
+  
+cache:
+  directories:
+  - $HOME/.m2
