--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ services:
 
 script:
   - docker run -it -v $(pwd):/root/sources -w /root/sources maven:3.3.3-jdk-8 mvn clean package
-  - docker build -t freenews/tagcloud:latest .
+  - docker build -t n2ru/tagcloud:latest .
   - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-  - docker push freenews/tagcloud:latest
+  - docker push n2ru/tagcloud:latest
  
   
 cache:
