--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.datasource.url=jdbc:mysql://172.17.0.1:3306/db225618_8
-spring.datasource.username=admin
-spring.datasource.password=adm12345
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+logging.level.*=${LOGGING_LEVEL}
 logging.level.netgloo = DEBUG
-server.port=8081
+server.port=8080
