--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -4,5 +4,19 @@ spring.datasource.password=adm12345
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 logging.level.*=DEBUG
-logging.level.netgloo = DEBUG
 server.port=8082
+
+# Keep the connection alive if idle for a long time (needed in production)
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
+
+# Show or not log for each sql query
+spring.jpa.show-sql = true
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+# Number of ms to wait before throwing an exception if no connection is available.
+spring.datasource.max-wait=10000
+# Maximum number of active connections that can be allocated from this pool at the same time.
+spring.datasource.max-active=10
